--- a/tests/index.html
+++ b/tests/index.html
@@ -51,8 +51,9 @@
       el.innerHTML = 'Add package=package1,package2 in the URL to test packages';
     } else {
       if (packages[1] === 'all') {
-        packages = ['ember-datetime', 'ember-handlebars', 'ember-metal', 'ember-runtime',
-                    'ember-states', 'ember-views'];
+        packages = [
+          'ember-routemanager'
+        ];
       } else {
         packages = packages[1].split(',');
       }
